app/assets/stylesheets/components/_navbar.scss
.navbar-lewagon {
  justify-content: space-between;
  background: $color-1;
  height: calc(var(--vh) * 9);
  min-height: 70px;
  z-index: 1002;
  transition: all 1s;
}

.navbar-lewagon .navbar-collapse {
  flex-grow: 0;
}

.navbar-collapse, .dropdown-menu {
  z-index: 11;
  text-align: center;
  background-color: #ffffff50;
  border: none;
}

.navbar-brand-img {
  height: calc(var(--vh) * 6);
  width: calc(var(--vh) * 6) / 3.2257;
  opacity: 1;
  @media(min-width: 576px) {
    height: calc(var(--vh) * 7);
  }
}
.navbar-brand-img.trigger {
  transition: 1s;
}
.navbar-brand-img.active {
  opacity: 0;
}

.featurette-heading {
  color: $blue-spinal;
  span {
    color: $green-spinal;
  }
}

.featurette-divider {
  background-color: $blue-spinal;
  hr {
    height: 3px !important;
  }
}

.dropdown-menu {
  background-color: #ffffff00
}

// hamburger
  .hamburger {
    position: fixed;
    display: flex;
    flex-direction: column;
    gap: 12px;
    align-items: center;
    cursor: pointer;
    z-index: 1200;
    right: 2%;
    width: 27px;
  }
  .trigger {
    transition: 0.8s ease;
  }
  .hidden {
    display: none;
  }
  .hamburger.active {
    gap: 0;
  }
  .long-line,
  .short-line {
    position: relative;
    width: 27px;
    border-bottom: 2px solid $color-2;
    border-radius: 20px;
  }
  .long-line {
    position: absolute;
    top: 44%;
  }
  .short-line {
    width: 20px;
  }
  .short-line.active {
    width: 0;
  }
  .long-line.active-long-line-1 {
    transform: rotate(315deg);
    border-bottom: 3px solid $color-2;
  }
  .long-line-2.active-long-line-2 {
    transform: rotate(225deg);
    border-bottom: 3px solid $color-2;
  }
  // hamburger

